--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ JWT_SECRET = 'secret@2025'
 
 # Admin Credentials
 ADMIN_EMAIL = "admin@example.com"
-ADMIN_PASSWORD = "greatstack"
+ADMIN_PASSWORD = "sudeepdadheech"
 
 # MongoDB
 MONGODB_URI = "mongodb+srv://sudeepdadheech2022:f2030e5@cluster0.vbje8y7.mongodb.net"
